--- a/analise_de_dados.ipynb
+++ b/analise_de_dados.ipynb
@@ -1538,7 +1538,7 @@
     "# param2: número de bins\n",
     "# param3: axis\n",
     "# param4: label para gráfico\n",
-    "# param5: cor, default: royalblue\n",
+    "# param5: cor, default: seagreen\n",
     "\n",
     "def graf_3_histplot(param1, param2, param3, param4, param5='seagreen'):\n",
     "    sns.histplot(data=param1, bins=param2, ax=param3, color=param5, kde=True)\n",
