doc: inclusão de explicabilidade do item 3.6.

--- a/000_analise_exploratoria.ipynb
+++ b/000_analise_exploratoria.ipynb
@@ -1059,6 +1059,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bd76e205",
+   "metadata": {},
+   "source": [
+    "Os histogramas permitem observar a forma da distribuição e possíveis padrões de concentração dos dados.\n",
+    "\n",
+    "- **Gender**: variável binária, com frequência equilibrada entre 0 e 1, indicando proporção semelhante entre homens e mulheres na amostra.\n",
+    "- **Age**: apresenta formato quase normal, levemente concentrada entre aproximadamente 35 e 58 anos, público majoritário é de adultos em idade economicamente ativa.\n",
+    "- **Annual Salary**: distribuição aproximadamente normal, centrado em torno de 55.000 a 73.000, sugerindo renda anual média estável e homogênea entre clientes.\n",
+    "- **Credit Card Debt**: também se aproxima de uma curva normal, com leve assimetria à direita; indica que a maioria tem dívidas moderadas entre 7.000 e 12.500.\n",
+    "- **Net Worth**: distribuição ligeiramente assimétrica à direita, refletindo a presença de alguns clientes com patrimônio líquido muito elevado; a maioria concentra-se aproximadamente entre 200.000 e 650.000.\n",
+    "- **Car Purchase Amount**: distribuição quase normal, com leve cauda à esquerda, concentrando-se entre 35.000 e 55.000, faixa de compra predominante entre os clientes.\n",
+    "\n",
+    "As variáveis numéricas apresentam, em geral, distribuições próximas à normalidade, com pequenas assimetrias esperadas em variáveis financeiras.\n",
+    "Isso reforça a consistência do dataset, sem necessidade imediata de transformações."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "99f2a0e5",
    "metadata": {},
    "source": [
@@ -1271,7 +1289,7 @@
    "id": "aa177072",
    "metadata": {},
    "source": [
-    "#### 4.1.2 Qual a distribuição da idade dos clientes?"
+    "#### 4.1.1. Qual a distribuição da idade dos clientes?"
    ]
   },
   {
