doc/feat: inclusão de explicabilidade do item 4.1.5, ajuste nas variáveis de média (interpretação incorreta).

--- a/000_analise_exploratoria.ipynb
+++ b/000_analise_exploratoria.ipynb
@@ -1484,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "14c8d18d",
    "metadata": {},
    "outputs": [
@@ -1503,19 +1503,19 @@
     "# Ajuste do tamanho da figura\n",
     "plt.figure(figsize=(10, 6))\n",
     "\n",
-    "# Calcula da mediana de idade por gênero\n",
-    "mediana_idade = df.groupby('Gender')['Age'].mean()\n",
+    "# Cálculo da média de idade por gênero\n",
+    "media_idade = df.groupby('Gender')['Age'].mean()\n",
     "\n",
     "# Gráfico da idade por gênero\n",
     "ax = sns.boxenplot(data=df, x='Gender', y='Age', palette=['#ea8c87', '#5d9eba'])\n",
     "\n",
-    "# Adiciona anotações de mediana\n",
-    "for i, gender in enumerate(mediana_idade.index):\n",
-    "    mediana = mediana_idade[gender]\n",
-    "    ax.text(i, mediana + 0.5, f'Mediana: {mediana:.1f} anos', \n",
+    "# Adiciona anotações de média\n",
+    "for i, gender in enumerate(media_idade.index):\n",
+    "    media = media_idade[gender]\n",
+    "    ax.text(i, media + 0.5, f'Média: {media:.1f} anos', \n",
     "            ha='center', va='bottom', fontsize=12, color='#000')\n",
     "\n",
-    "# Alterando os valores do rótulos\n",
+    "# Alterando os valores dos rótulos\n",
     "ax.set_xticks([0, 1])\n",
     "ax.set_xticklabels(['Feminino', 'Masculino'])\n",
     "\n",
@@ -1531,21 +1531,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b7f7ae4",
+   "id": "fd6c13b6",
    "metadata": {},
    "source": [
-    "O gráfico mostra que não há diferença significativa de idade mediana entre os gêneros:\n",
+    "O gráfico mostra que não há diferença significativa na idade média entre os gêneros:\n",
     "\n",
-    "- Feminino: mediana de 46,8 anos\n",
-    "- Masculino: mediana de 45,7 anos\n",
+    "- Feminino: média de 46,8 anos\n",
+    "- Masculino: média de 45,7 anos\n",
     "\n",
     "A diferença de apenas 1,1 ano é pequena e indica que homens e mulheres possuem faixas etárias bastante semelhantes.\n",
     "\n",
-    "A dispersão (amplitude interquartil) é parecida para ambos os gêneros, o que reforça a homogeneidade etária.\n",
+    "A dispersão (amplitude interquartil) é parecida para ambos os gêneros, reforçando a homogeneidade etária.\n",
     "\n",
-    "Há poucos outliers (idades mais extremas), principalmente entre 20 e 70 anos, sem impacto expressivo na mediana geral.\n",
+    "Observa-se a presença de poucos outliers, idades mais extremas, principalmente entre 20 e 70 anos, sem impacto expressivo na média geral.\n",
     "\n",
-    "A idade dos clientes é praticamente equilibrada entre os gêneros, o que reduz o risco de viés etário em análises comparativas, como comportamento de compra ou renda."
+    "De modo geral, a idade média dos clientes é praticamente equilibrada entre os gêneros, o que reduz o risco de viés etário em análises comparativas, como comportamento de compra ou renda."
    ]
   },
   {
@@ -1558,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "7075aeb5",
    "metadata": {},
    "outputs": [
@@ -1577,20 +1577,20 @@
     "# Ajuste do tamanho da figura\n",
     "plt.figure(figsize=(10, 6))\n",
     "\n",
-    "# Cálculo da mediana de compra por gênero\n",
-    "mediana_compra = df.groupby('Gender')['Car Purchase Amount'].mean()\n",
+    "# Cálculo da média de compra por gênero\n",
+    "media_compra = df.groupby('Gender')['Car Purchase Amount'].mean()\n",
     "\n",
     "# Gráfico do valor de compra por gênero\n",
     "ax = sns.boxenplot(data=df, x='Gender', y='Car Purchase Amount', \n",
     "                   palette=['#ea8c87', '#5d9eba'])\n",
     "\n",
-    "# Adiciona anotações de mediana\n",
-    "for i, gender in enumerate(mediana_compra.index):\n",
-    "    mediana = mediana_compra[gender]\n",
-    "    ax.text(i, mediana + 0.5, f'Mediana: $ {mediana:,.0f}', \n",
+    "# Adiciona anotações de média\n",
+    "for i, gender in enumerate(media_compra.index):\n",
+    "    media = media_compra[gender]\n",
+    "    ax.text(i, media + 0.5, f'Média: $ {media:,.0f}', \n",
     "            ha='center', va='bottom', fontsize=12, color='#000')\n",
     "\n",
-    "# Alterando os valores do rótulos\n",
+    "# Alterando os valores dos rótulos\n",
     "ax.set_xticks([0, 1])\n",
     "ax.set_xticklabels(['Feminino', 'Masculino'])\n",
     "\n",
@@ -1606,23 +1606,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c4ec01c",
+   "id": "61523ddd",
    "metadata": {},
    "source": [
-    "O gráfico indica que não há diferença relevante no valor da mediana de compra entre os gêneros:\n",
+    "O gráfico indica que não há diferença relevante no valor médio de compra entre os gêneros:\n",
     "\n",
-    "- Feminino: mediana de $44.933\n",
-    "- Masculino: mediana de $43.504\n",
+    "- Feminino: média de aproximadamente $44.933\n",
+    "- Masculino: média de aproximadamente $43.504\n",
     "\n",
     "A diferença de cerca de $1.400 é pequena, sugerindo que homens e mulheres apresentam comportamentos de compra semelhantes em relação ao valor gasto na aquisição de automóveis.\n",
     "\n",
     "A dispersão dos valores é parecida entre os grupos, com faixas principais entre $30.000 e $60.000.\n",
     "\n",
-    "Há alguns outliers em ambos os gêneros (valores acima de $70.000 e abaixo de $20.000), indicando clientes com padrões de compra mais atípicos.\n",
+    "Observa-se a presença de outliers em ambos os gêneros, valores acima de $70.000 e abaixo de $20.000, o que indica clientes com padrões de compra mais atípicos.\n",
     "\n",
-    "A mediana é próxima entre os grupos, reforçando a ausência de viés de gênero no gasto médio.\n",
-    "\n",
-    "O gênero não exerce influência significativa sobre o valor da mediana de compra, o que sugere que outros fatores, como renda, patrimônio e dívida, provavelmente explicam melhor as variações no valor gasto."
+    "A média próxima entre os grupos reforça a ausência de viés de gênero no valor gasto. Assim, o gênero não parece exercer influência significativa sobre o valor médio de compra, sendo provável que outras variáveis, como renda anual, patrimônio líquido e nível de dívida, expliquem melhor as variações no valor investido na compra do automóvel."
    ]
   },
   {
@@ -1671,6 +1669,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2805d8f8",
+   "metadata": {},
+   "source": [
+    "O gráfico de dispersão com linha de regressão indica uma relação positiva moderada entre idade e valor do carro comprado.\n",
+    "Em termos gerais, clientes mais velhos tendem a comprar carros de maior valor, enquanto os mais jovens adquirem veículos mais baratos.\n",
+    "\n",
+    "A tendência é claramente ascendente, sugerindo que à medida que a idade aumenta, o poder aquisitivo também cresce, refletindo em compras de maior valor.\n",
+    "\n",
+    "A área sombreada ao redor da linha (intervalo de confiança) é relativamente estreita, reforçando a consistência da tendência observada.\n",
+    "\n",
+    "Há correlação positiva entre idade e valor do carro comprado, o que sugere que a idade é um fator preditivo relevante para o valor de compra, provavelmente associada ao aumento de estabilidade financeira e renda ao longo da vida."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8cc722f3",
    "metadata": {},
    "source": [
@@ -1679,7 +1692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "4c3ba76b",
    "metadata": {},
    "outputs": [
@@ -1725,6 +1738,19 @@
     "# Layout final\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "725be2e2",
+   "metadata": {},
+   "source": [
+    "Sim.\n",
+    "De acordo com o gráfico, as faixas etárias que tendem a gastar mais na compra de carros são as de 55 a 64 anos e a de mais de 65 anos, com valores médios de compra muito próximos — cerca de US$ 54.762 e US$ 54.667, respectivamente.\n",
+    "\n",
+    "Isso indica que os consumidores mais velhos investem em carros de maior valor, possivelmente por apresentarem maior estabilidade financeira ou preferência por veículos mais confortáveis e sofisticados.\n",
+    "\n",
+    "👉 Em contraste, o grupo com menos de 25 anos é o que menos gasta, com valor médio de apenas US$ 19.369, o que reflete menor poder aquisitivo ou prioridade em veículos mais econômicos."
    ]
   },
   {
@@ -2081,7 +2107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
