doc: inclusão de explicabilidade do itens 4.2.1. e 4.2.2.

--- a/000_analise_exploratoria.ipynb
+++ b/000_analise_exploratoria.ipynb
@@ -1745,12 +1745,11 @@
    "id": "725be2e2",
    "metadata": {},
    "source": [
-    "Sim.\n",
-    "De acordo com o gráfico, as faixas etárias que tendem a gastar mais na compra de carros são as de 55 a 64 anos e a de mais de 65 anos, com valores médios de compra muito próximos — cerca de US$ 54.762 e US$ 54.667, respectivamente.\n",
+    "De acordo com o gráfico, as faixas etárias que tendem a gastar mais na compra de carros são as de 55 a 64 anos e a de mais de 65 anos, com valores médios de compra muito próximos, cerca de US$ 54.762 e US$ 54.667, respectivamente.\n",
     "\n",
     "Isso indica que os consumidores mais velhos investem em carros de maior valor, possivelmente por apresentarem maior estabilidade financeira ou preferência por veículos mais confortáveis e sofisticados.\n",
     "\n",
-    "👉 Em contraste, o grupo com menos de 25 anos é o que menos gasta, com valor médio de apenas US$ 19.369, o que reflete menor poder aquisitivo ou prioridade em veículos mais econômicos."
+    "Em contraste, o grupo com menos de 25 anos é o que menos gasta, com valor médio de apenas US$ 19.369, o que reflete menor poder aquisitivo ou prioridade em veículos mais econômicos."
    ]
   },
   {
@@ -1807,6 +1806,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "95d53a8a",
+   "metadata": {},
+   "source": [
+    "A distribuição da renda anual dos clientes apresentada no gráfico é aproximadamente normal, com uma leve assimetria.\n",
+    "\n",
+    "A maior concentração de clientes possui renda entre US$ 55.000 e US$ 73.000.\n",
+    "\n",
+    "Poucos clientes têm renda abaixo de US$ 40.000 ou acima de US$ 90.000.\n",
+    "\n",
+    "Isso indica que a maioria dos clientes está dentro de uma faixa de renda média, com poucos casos extremos de renda muito alta ou muito baixa.\n",
+    "\n",
+    "Em resumo, trata-se de uma população relativamente homogênea em termos de renda, com tendência central bem definida e distribuição levemente inclinada para rendas mais altas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "deb76b46",
    "metadata": {},
    "source": [
@@ -1848,6 +1863,25 @@
     "# Layout final\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91de68b9",
+   "metadata": {},
+   "source": [
+    "O gráfico mostra uma correlação positiva entre renda anual e valor de compra.\n",
+    "\n",
+    "À medida que a renda anual aumenta, o valor gasto na compra do carro também tende a subir.\n",
+    "Isso indica que clientes com maior poder aquisitivo compram carros de maior valor.\n",
+    "\n",
+    "A linha de regressão tem inclinação positiva, confirmando essa tendência.\n",
+    "\n",
+    "Apesar da dispersão, ou seja, clientes com mesma renda comprando carros de valores diferentes, a tendência geral é clara, renda mais alta compra mais cara.\n",
+    "\n",
+    "O intervalo sombreado mostra o nível de confiança, reforçando que a relação é consistente.\n",
+    "\n",
+    "Existe uma relação linear positiva moderada entre renda e valor de compra, o que pode ajudar a prever faixas de gasto com base na renda."
    ]
   },
   {
