doc: inclusão de explicabilidade do item 4.2.3.

--- a/000_analise_exploratoria.ipynb
+++ b/000_analise_exploratoria.ipynb
@@ -1931,6 +1931,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "11c71dd0",
+   "metadata": {},
+   "source": [
+    "O gráfico indica que não há relação significativa entre o valor da dívida no cartão de crédito e o valor de compra do carro.\n",
+    "\n",
+    "A linha de regressão é praticamente horizontal, mostrando correlação próxima de zero.\n",
+    "\n",
+    "Isso significa que clientes com dívidas maiores não necessariamente compram carros mais caros e vice-versa.\n",
+    "\n",
+    "A dispersão ampla dos pontos reforça que o comportamento de compra é independente do nível de endividamento no cartão.\n",
+    "\n",
+    "Não existe uma tendência clara de que maior dívida leve a compras de maior valor. O valor gasto na compra do carro parece estar mais relacionado a outros fatores, como renda anual ou faixa etária, do que à dívida no cartão de crédito."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0f0dc3dd",
    "metadata": {},
    "source": [
