doc: inclusão de explicabilidade do item 4.2.4.

--- a/000_analise_exploratoria.ipynb
+++ b/000_analise_exploratoria.ipynb
@@ -1995,6 +1995,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d3f8f925",
+   "metadata": {},
+   "source": [
+    "O patrimônio líquido tem relação positiva com o valor de compra.\n",
+    "\n",
+    "A linha de regressão ascendente indica que quanto maior o patrimônio líquido, maior tende a ser o valor gasto na compra do carro.\n",
+    "\n",
+    "Apesar de alguma dispersão nos dados (variação natural entre clientes), há uma tendência clara de crescimento: pessoas com patrimônio mais alto geralmente compram carros de maior valor.\n",
+    "\n",
+    "O intervalo de confiança confirma que essa relação é consistente ao longo da amostra.\n",
+    "\n",
+    "Há uma correlação positiva moderada entre o patrimônio líquido e o valor da compra. Isso sugere que clientes mais ricos têm maior propensão a adquirir veículos mais caros, o que é coerente com o comportamento esperado de consumo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5ecc03ec",
    "metadata": {},
    "source": [
