doc: inclusão de explicabilidade do item 4.2.5.

--- a/000_analise_exploratoria.ipynb
+++ b/000_analise_exploratoria.ipynb
@@ -2064,6 +2064,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0533d5f6",
+   "metadata": {},
+   "source": [
+    "Renda, dívida e patrimônio líquido praticamente não são correlacionados entre si.\n",
+    "\n",
+    "_Annual Salary_ x _Credit Card Debt_ (_0.05_): correlação muito fraca e positiva, ou seja, a renda não explica o nível de endividamento.\n",
+    "\n",
+    "_Annual Salary_ x _Net Worth_ (_0.01_): praticamente nenhuma correlação entre salário e patrimônio, o que indica que pessoas com rendas semelhantes podem ter níveis de patrimônio bem diferentes.\n",
+    "\n",
+    "_Credit Card Debt_ x _Net Worth_ (_-0.05_): correlação muito fraca e negativa, sugerindo apenas uma tendência mínima de que quem tem mais dívida tende a ter um patrimônio um pouco menor, mas sem relevância estatística.\n",
+    "\n",
+    "Os indicadores financeiros analisados (renda, dívida e patrimônio) são independentes entre si neste conjunto de dados. Isso mostra que ter alta renda não significa necessariamente acumular patrimônio ou ter menos dívida."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8de05f48",
    "metadata": {},
    "source": [
