--- a/000_analise_exploratoria.ipynb
+++ b/000_analise_exploratoria.ipynb
@@ -2166,6 +2166,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2fddc39b",
+   "metadata": {},
+   "source": [
+    "As variáveis que apresentam maior correlação com o valor de compra são:\n",
+    "\n",
+    "- **Idade (0.63)**: é a variável com maior influência positiva. Clientes mais velhos tendem a comprar carros mais caros, possivelmente por maior estabilidade financeira e poder aquisitivo.\n",
+    "\n",
+    "- **Renda Anual (0.62)**: também mostra forte relação positiva: quanto maior a renda, maior tende a ser o valor do carro adquirido.\n",
+    "\n",
+    "- **Patrimônio Líquido (0.49)**: tem correlação moderada, indicando que pessoas com maior patrimônio geralmente compram veículos de maior valor.\n",
+    "\n",
+    "As demais variáveis têm pouca ou nenhuma correlação:\n",
+    "\n",
+    "- **Dívida no cartão (0.03)**: não há relação relevante com o valor da compra.\n",
+    "\n",
+    "- **Gênero (-0.07)**: leve correlação negativa, mas estatisticamente insignificante.\n",
+    "\n",
+    "O valor de compra é mais fortemente explicado por idade, renda e patrimônio, o que reforça a importância de fatores socioeconômicos na decisão de compra de veículos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d1360c76",
    "metadata": {},
    "source": [
