doc: inclusão de explicabilidade do item 5.

--- a/000_analise_exploratoria.ipynb
+++ b/000_analise_exploratoria.ipynb
@@ -2193,6 +2193,22 @@
    "source": [
     "## 5. Insights e recomendações"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d0a861b",
+   "metadata": {},
+   "source": [
+    "Os dados indicam que o principal público comprador está na faixa etária de **35 a 55 anos**, com **equilíbrio entre os gêneros**, já que não há diferenças significativas nos valores de compra entre homens e mulheres. Observa-se, entretanto, que **quanto maior a idade, maior tende a ser o valor gasto na aquisição do veículo**, com destaque para o grupo de **55 a 65 anos**, que concentra as vendas de maior valor, embora não seja o segmento mais numeroso.\n",
+    "\n",
+    "A **renda média anual** dos clientes situa-se entre **R$ 55.000 e R$ 73.000**, sendo a **renda um fator fortemente determinante** no valor da compra, clientes com maior renda tendem a adquirir veículos mais caros.\n",
+    "O **patrimônio líquido** também influencia positivamente o valor de compra, embora **em menor intensidade** quando comparado à renda anual.\n",
+    "\n",
+    "As **dívidas em cartão** não mostraram impacto relevante nas vendas, o que sugere que esses débitos não comprometem a capacidade financeira ou o acesso a crédito dos clientes. No entanto, seria **valioso incorporar o score de crédito** à base de dados, permitindo identificar **bons e maus pagadores**. Essa informação possibilitaria **ajustar campanhas, orientar vendedores** sobre as **faixas de veículos adequadas a cada perfil** e sugerir **planos de financiamento compatíveis**.\n",
+    "\n",
+    "Recomenda-se, portanto, **focar em clientes com renda mais alta e idade acima de 35 anos** para ofertas de **veículos premium e de maior valor agregado**, enquanto os demais públicos devem receber campanhas personalizadas conforme seu poder de compra.\n",
+    "Por fim, é fundamental que **os dados sobre perfis de clientes e faixas de veículos** estejam **acessíveis às equipes de vendas**, permitindo decisões mais assertivas, **maior taxa de conversão** e **incremento no volume total de vendas**."
+   ]
   }
  ],
  "metadata": {
