doc: correção do $ nos textos.

--- a/000_analise_exploratoria.ipynb
+++ b/000_analise_exploratoria.ipynb
@@ -1611,14 +1611,14 @@
    "source": [
     "O gráfico indica que não há diferença relevante no valor médio de compra entre os gêneros:\n",
     "\n",
-    "- Feminino: média de aproximadamente $44.933\n",
-    "- Masculino: média de aproximadamente $43.504\n",
+    "- Feminino: média de aproximadamente <span>&dollar;</span>44.933\n",
+    "- Masculino: média de aproximadamente <span>&dollar;</span>43.504\n",
     "\n",
-    "A diferença de cerca de $1.400 é pequena, sugerindo que homens e mulheres apresentam comportamentos de compra semelhantes em relação ao valor gasto na aquisição de automóveis.\n",
+    "A diferença de cerca de <span>&dollar;</span>1.400 é pequena, sugerindo que homens e mulheres apresentam comportamentos de compra semelhantes em relação ao valor gasto na aquisição de automóveis.\n",
     "\n",
-    "A dispersão dos valores é parecida entre os grupos, com faixas principais entre $30.000 e $60.000.\n",
+    "A dispersão dos valores é parecida entre os grupos, com faixas principais entre <span>&dollar;</span>30.000 e <span>&dollar;</span>60.000.\n",
     "\n",
-    "Observa-se a presença de outliers em ambos os gêneros, valores acima de $70.000 e abaixo de $20.000, o que indica clientes com padrões de compra mais atípicos.\n",
+    "Observa-se a presença de outliers em ambos os gêneros, valores acima de <span>&dollar;</span>70.000 e abaixo de <span>&dollar;</span>20.000, o que indica clientes com padrões de compra mais atípicos.\n",
     "\n",
     "A média próxima entre os grupos reforça a ausência de viés de gênero no valor gasto. Assim, o gênero não parece exercer influência significativa sobre o valor médio de compra, sendo provável que outras variáveis, como renda anual, patrimônio líquido e nível de dívida, expliquem melhor as variações no valor investido na compra do automóvel."
    ]
@@ -1745,11 +1745,11 @@
    "id": "725be2e2",
    "metadata": {},
    "source": [
-    "De acordo com o gráfico, as faixas etárias que tendem a gastar mais na compra de carros são as de 55 a 64 anos e a de mais de 65 anos, com valores médios de compra muito próximos, cerca de US$ 54.762 e US$ 54.667, respectivamente.\n",
+    "De acordo com o gráfico, as faixas etárias que tendem a gastar mais na compra de carros são as de 55 a 64 anos e a de mais de 65 anos, com valores médios de compra muito próximos, cerca de US<span>&dollar;</span> 54.762 e US<span>&dollar;</span> 54.667, respectivamente.\n",
     "\n",
     "Isso indica que os consumidores mais velhos investem em carros de maior valor, possivelmente por apresentarem maior estabilidade financeira ou preferência por veículos mais confortáveis e sofisticados.\n",
     "\n",
-    "Em contraste, o grupo com menos de 25 anos é o que menos gasta, com valor médio de apenas US$ 19.369, o que reflete menor poder aquisitivo ou prioridade em veículos mais econômicos."
+    "Em contraste, o grupo com menos de 25 anos é o que menos gasta, com valor médio de apenas US<span>&dollar;</span> 19.369, o que reflete menor poder aquisitivo ou prioridade em veículos mais econômicos."
    ]
   },
   {
@@ -1811,9 +1811,9 @@
    "source": [
     "A distribuição da renda anual dos clientes apresentada no gráfico é aproximadamente normal, com uma leve assimetria.\n",
     "\n",
-    "A maior concentração de clientes possui renda entre US$ 55.000 e US$ 73.000.\n",
+    "A maior concentração de clientes possui renda entre US<span>&dollar;</span> 55.000 e US<span>&dollar;</span> 73.000.\n",
     "\n",
-    "Poucos clientes têm renda abaixo de US$ 40.000 ou acima de US$ 90.000.\n",
+    "Poucos clientes têm renda abaixo de US<span>&dollar;</span> 40.000 ou acima de US<span>&dollar;</span> 90.000.\n",
     "\n",
     "Isso indica que a maioria dos clientes está dentro de uma faixa de renda média, com poucos casos extremos de renda muito alta ou muito baixa.\n",
     "\n",
@@ -2201,7 +2201,7 @@
    "source": [
     "Os dados indicam que o principal público comprador está na faixa etária de **35 a 55 anos**, com **equilíbrio entre os gêneros**, já que não há diferenças significativas nos valores de compra entre homens e mulheres. Observa-se, entretanto, que **quanto maior a idade, maior tende a ser o valor gasto na aquisição do veículo**, com destaque para o grupo de **55 a 65 anos**, que concentra as vendas de maior valor, embora não seja o segmento mais numeroso.\n",
     "\n",
-    "A **renda média anual** dos clientes situa-se entre **R$ 55.000 e R$ 73.000**, sendo a **renda um fator fortemente determinante** no valor da compra, clientes com maior renda tendem a adquirir veículos mais caros.\n",
+    "A **renda média anual** dos clientes situa-se entre **R<span>&dollar;</span> 55.000 e R<span>&dollar;</span> 73.000**, sendo a **renda um fator fortemente determinante** no valor da compra, clientes com maior renda tendem a adquirir veículos mais caros.\n",
     "O **patrimônio líquido** também influencia positivamente o valor de compra, embora **em menor intensidade** quando comparado à renda anual.\n",
     "\n",
     "As **dívidas em cartão** não mostraram impacto relevante nas vendas, o que sugere que esses débitos não comprometem a capacidade financeira ou o acesso a crédito dos clientes. No entanto, seria **valioso incorporar o score de crédito** à base de dados, permitindo identificar **bons e maus pagadores**. Essa informação possibilitaria **ajustar campanhas, orientar vendedores** sobre as **faixas de veículos adequadas a cada perfil** e sugerir **planos de financiamento compatíveis**.\n",
@@ -2213,7 +2213,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2227,7 +2227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
